--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+
+    <string name="location_permission_denied">Location Permission Denied</string>
+    <string name="permission_required_toast">Permission Required to access your Location</string>
+    <string name="permission_rationale_location">Rationale Permission Location Dialog</string>
 </resources>
