--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="location_permission_denied">Location Permission Denied</string>
     <string name="permission_required_toast">Permission Required to access your Location</string>
     <string name="permission_rationale_location">Rationale Permission Location Dialog</string>
+
+    <!-- Strings used for errors -->
+    <string name="no_internet">Please check your internet connection</string>
+    <string name="network_error">Network error, could get data,please try again!</string>
+
 </resources>
